Center people on tablet. Fix callout padding.

--- a/themes/rca-inc/style.css
+++ b/themes/rca-inc/style.css
@@ -319,7 +319,7 @@ blockquote { border-left: 8px solid #c4612b; padding: 0rem 1.25rem 0 1.1875rem; 
 #mega-menu-container li a { padding-right: 0rem; padding-left: 0rem; }
 main { margin-bottom: 0rem; }
 .about-us-testimonial { background-color: #1a365d; color: #fff; padding: 40px; margin-bottom: 40px; }
-.about-us-testimonial p { color: #fff; font-family: 'Lora',margin-bottom: 0; sans-serif; font-weight: bold; font-size: 1.25rem; font-style: italic; }
+.about-us-testimonial p { color: #fff; font-family: 'Lora',margin-bottom: 0; sans-serif; font-weight: bold; font-size: 1.25rem; font-style: italic; margin-bottom:0rem; }
 
 .item-block { margin: 1rem 0rem; }
 .archived-title { height: 80px; }
